[tool.poetry]
name = "oxo"
version = "0.1.0"
description = ""
authors = ["Graham Voysey <gvoysey@bu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.7.0"

[tool.isort]
skip='venv'
profile='black'

[tool.black]
line-length = 120
target-version = ['py36','py37', 'py38']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.env
    | \venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry.scripts]
oxo = "oxo.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
